Get rid of Americanism: scepter => sceptre

--- a/tex/p185.tex
+++ b/tex/p185.tex
@@ -61,7 +61,7 @@
 \vs p185 5:13 Pilate was terrorized by the insistent clamour of the mob, acting under the direct leadership of the chief priests and the councillors of the Sanhedrin; nevertheless, he decided upon at least one more attempt to appease the crowd and save Jesus.
 \usection{6.\bibnobreakspace Pilate’s Last Appeal}
 \vs p185 6:1 In all that is transpiring early this Friday morning before Pilate, only the enemies of Jesus are participating. His many friends either do not yet know of his night arrest and early morning trial or are in hiding lest they also be apprehended and adjudged worthy of death because they believe Jesus’ teachings. In the multitude which now clamours for the Master’s death are to be found only his sworn enemies and the easily led and unthinking populace.
-\vs p185 6:2 Pilate would make one last appeal to their pity. Being afraid to defy the clamour of this misled mob who cried for the blood of Jesus, he ordered the Jewish guards and the Roman soldiers to take Jesus and scourge him. This was in itself an unjust and illegal procedure since the Roman law provided that only those condemned to die by crucifixion should be thus subjected to scourging. The guards took Jesus into the open courtyard of the praetorium for this ordeal. Though his enemies did not witness this scourging, Pilate did, and before they had finished this wicked abuse, he directed the scourgers to desist and indicated that Jesus should be brought to him. Before the scourgers laid their knotted whips upon Jesus as he was bound to the whipping post, they again put upon him the purple robe, and plaiting a crown of thorns, they placed it upon his brow. And when they had put a reed in his hand as a mock scepter, they knelt before him and mocked him, saying, “Hail, king of the Jews!” And they spit upon him and struck him in the face with their hands. And one of them, before they returned him to Pilate, took the reed from his hand and struck him upon the head.
+\vs p185 6:2 Pilate would make one last appeal to their pity. Being afraid to defy the clamour of this misled mob who cried for the blood of Jesus, he ordered the Jewish guards and the Roman soldiers to take Jesus and scourge him. This was in itself an unjust and illegal procedure since the Roman law provided that only those condemned to die by crucifixion should be thus subjected to scourging. The guards took Jesus into the open courtyard of the praetorium for this ordeal. Though his enemies did not witness this scourging, Pilate did, and before they had finished this wicked abuse, he directed the scourgers to desist and indicated that Jesus should be brought to him. Before the scourgers laid their knotted whips upon Jesus as he was bound to the whipping post, they again put upon him the purple robe, and plaiting a crown of thorns, they placed it upon his brow. And when they had put a reed in his hand as a mock sceptre, they knelt before him and mocked him, saying, “Hail, king of the Jews!” And they spit upon him and struck him in the face with their hands. And one of them, before they returned him to Pilate, took the reed from his hand and struck him upon the head.
 \vs p185 6:3 Then Pilate led forth this bleeding and lacerated prisoner and, presenting him before the mixed multitude, said: “Behold the man! Again I declare to you that I find no crime in him, and having scourged him, I would release him.”
 \vs p185 6:4 There stood Jesus of Nazareth, clothed in an old purple royal robe with a crown of thorns piercing his kindly brow. His face was bloodstained and his form bowed down with suffering and grief. But nothing can appeal to the unfeeling hearts of those who are victims of intense emotional hatred and slaves to religious prejudice. This sight sent a mighty shudder through the realms of a vast universe, but it did not touch the hearts of those who had set their minds to effect the destruction of Jesus.
 \vs p185 6:5 When they had recovered from the first shock of seeing the Master’s plight, they only shouted the louder and the longer, “Crucify him! Crucify him! Crucify him!”
