--- a/tex/p003.tex
+++ b/tex/p003.tex
@@ -65,7 +65,7 @@
 \vs p003 5:16 \pc The full appreciation of truth, beauty, and goodness is inherent in the perfection of the divine universe. The inhabitants of the Havona worlds do not require the potential of relative value levels as a choice stimulus; such perfect beings are able to identify and choose the good in the absence of all contrastive and thought\hyp{}compelling moral situations. But all such perfect beings are, in moral nature and spiritual status, what they are by virtue of the fact of existence. They have experientially earned advancement only within their inherent status. Mortal man earns even his status as an ascension candidate by his own faith and hope. Everything divine which the human mind grasps and the human soul acquires is an experiential attainment; it is a \bibemph{reality} of personal experience and is therefore a unique possession in contrast to the inherent goodness and righteousness of the inerrant personalities of Havona.
 \vs p003 5:17 \pc The creatures of Havona are naturally brave, but they are not courageous in the human sense. They are innately kind and considerate, but hardly altruistic in the human way. They are expectant of a pleasant future, but not hopeful in the exquisite manner of the trusting mortal of the uncertain evolutionary spheres. They have faith in the stability of the universe, but they are utter strangers to that saving faith whereby mortal man climbs from the status of an animal up to the portals of Paradise. They love the truth, but they know nothing of its soul\hyp{}saving qualities. They are idealists, but they were born that way; they are wholly ignorant of the ecstasy of becoming such by exhilarating choice. They are loyal, but they have never experienced the thrill of wholehearted and intelligent devotion to duty in the face of temptation to default. They are unselfish, but they never gained such levels of experience by the magnificent conquest of a belligerent self. They enjoy pleasure, but they do not comprehend the sweetness of the pleasure escape from the pain potential.
 \usection{6.\bibnobreakspace The Father’s Primacy}
-\vs p003 6:1 With divine selflessness, consummate generosity, the Universal Father relinquishes authority and delegates power, but he is still primal; his hand is on the mighty lever of the circumstances of the universal realms; he has reserved all final decisions and unerringly wields the all\hyp{}powerful veto scepter of his eternal purpose with unchallengeable authority over the welfare and destiny of the outstretched, whirling, and ever\hyp{}circling creation.
+\vs p003 6:1 With divine selflessness, consummate generosity, the Universal Father relinquishes authority and delegates power, but he is still primal; his hand is on the mighty lever of the circumstances of the universal realms; he has reserved all final decisions and unerringly wields the all\hyp{}powerful veto sceptre of his eternal purpose with unchallengeable authority over the welfare and destiny of the outstretched, whirling, and ever\hyp{}circling creation.
 \vs p003 6:2 The sovereignty of God is unlimited; it is the fundamental fact of all creation. The universe was not inevitable. The universe is not an accident, neither is it self\hyp{}existent. The universe is a work of creation and is therefore wholly subject to the will of the Creator. The will of God is divine truth, living love; therefore are the perfecting creations of the evolutionary universes characterized by goodness --- nearness to divinity; by potential evil --- remoteness from divinity.
 \vs p003 6:3 \pc All religious philosophy, sooner or later, arrives at the concept of unified universe rule, of one God. Universe causes cannot be lower than universe effects. The source of the streams of universe life and of the cosmic mind must be above the levels of their manifestation. The human mind cannot be consistently explained in terms of the lower orders of existence. Man’s mind can be truly comprehended only by recognizing the reality of higher orders of thought and purposive will. Man as a moral being is inexplicable unless the reality of the Universal Father is acknowledged.
 \vs p003 6:4 The mechanistic philosopher professes to reject the idea of a universal and sovereign will, the very sovereign will whose activity in the elaboration of universe laws he so deeply reverences. What unintended homage the mechanist pays the law\hyp{}Creator when he conceives such laws to be self\hyp{}acting and self\hyp{}explanatory!
