--- a/urantia-study-edition.sty
+++ b/urantia-study-edition.sty
@@ -1008,7 +1008,7 @@
       \ifnum #1=32\partii\fi
       \ifnum #1=57\partiii\fi
       \ifnum #1=120\partiv\fi
-      \ifnum #1>0 {\headerfont\bibpaperfont\papertxt\ #1}\\\fi
+      \ifnum #1>0 {\headerfont\bibpaperfont\papertxt\ #1}\\[1ex]\fi
       {\addfontfeatures{WordSpace=2.0,LetterSpace=3.0}\bibpapertitlefont\hyperlink{qc#1}{\MakeUppercase{#2}}}\\
       \input{tex/p\thepaper-sections.tex}\vspace*{-1ex}%
    \end{center}%
