Support 'nofnt' option properly

--- a/tex/title.tex
+++ b/tex/title.tex
@@ -23,7 +23,7 @@
 \tunemarkup{pgkobomini}{\fontsize{12.8}{20}\selectfont}
 \tunemarkup{pgnexus7}{\fontsize{13.5}{20}\selectfont}
 \tunemarkup{pgkoboaurahd}{\fontsize{15}{20}\selectfont}
-THE BRITISH STUDY EDITION\\
+THE BRITISH \tunemarkuptwo{nofnt}{TEXT}{STUDY} EDITION\\
 \tunemarkup{pgkindledx}{\fontsize{16.5}{32}\selectfont}
 \tunemarkup{pghanlin}{\fontsize{9}{20}\selectfont}
 \tunemarkup{pgkobomini}{\fontsize{10}{20}\selectfont}
@@ -85,15 +85,14 @@ Edited by Tigran Aivazian\\[2ex]
 \parbox{0.9\linewidth}{\centering
 \textbf{\upshape\nocopyright\ No copyright is claimed on this book \serpimolot\\
 The text of the Urantia Papers is in the \itshape public domain}.\\[5pt]
-Cover design by Gary Tonge, www.vision-afar.com.\\
+\tunemarkuptwo{nofnt}{}{Cover design by Gary Tonge, www.vision-afar.com.\\}
 The latest version of this book can be downloaded from:\\
 {\upshape\bfseries http://www.bibles.org.uk}\\
 Please send all comments \&\ suggestions to {\makeatletter\upshape\bfseries aivazian.tigran@gmail.com\makeatother}\\
-The apparatus (marked with a circle in the text) contains all significant changes made since the 1955 first edition of the Urantia Book.\\
-The symbol \pc\ marks the first paragraph in the group as in the first edition, where such groups were delimited by blank lines.\\
-The asterisk * indicates a study note other than a textual variant.\\[5pt]
+\tunemarkuptwo{nofnt}{}{The apparatus (marked with a circle in the text) contains all significant changes made since the 1955 first edition of the Urantia Book.\\}
+The symbol \pc\ marks the first paragraph in the group as in the first edition, where such groups were delimited by blank lines.\tunemarkuptwo{nofnt}{\\[5pt]}{The asterisk * indicates a study note other than a textual variant.\\[5pt]}
 \tux\ Typeset with \XeLaTeX\ under Linux.\\
-Text set in \textbf{\tunemarkup{minionpro}{Adobe }\tunemarkup{garamond}{Adobe }\urantiamainfont} at \urantiamainfontsize pt.\\[18pt]
+Text set in \textbf{\tunemarkup{minionpro}{Adobe }\tunemarkup{garamond}{Adobe }\tunemarkup{academy}{ParaType }\urantiamainfont} at \urantiamainfontsize pt.\\[18pt]
 \upshape\small\bfseries PDF version: \tunemarkup{pgnexus7}{7in Colour}\tunemarkup{pghanlin}{6in eInk}\tunemarkup{pgkobomini}{5in eInk}\tunemarkup{pgkoboaurahd}{7in eInk}\tunemarkup{pgkindledx}{10in eInk}\\
 \upshape\small\bfseries PDF date: \mytoday{}\\
 }
